@@ -1,59 +1,74 @@
 package de.greensurvivors.greentreasure.comands;
 
 import de.greensurvivors.greentreasure.GreenTreasure;
-import de.greensurvivors.greentreasure.language.Lang;
-import de.greensurvivors.greentreasure.permission.Perm;
+import de.greensurvivors.greentreasure.PermissionManager;
+import de.greensurvivors.greentreasure.language.LangKey;
+import de.greensurvivors.greentreasure.language.PlaceHolder;
 import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.JoinConfiguration;
 import org.bukkit.command.CommandSender;
+import org.bukkit.permissions.Permissible;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 
-import static de.greensurvivors.greentreasure.comands.TreasureCommands.ABOUT;
+public class AboutSubCommand extends ASubCommand {
 
-public class AboutSubCommand {
-    private static AboutSubCommand instance;
+    public AboutSubCommand(@NotNull GreenTreasure plugin) {
+        super(plugin);
+    }
 
-    public static AboutSubCommand inst() {
-        if (instance == null)
-            instance = new AboutSubCommand();
-        return instance;
+    @Override
+    protected boolean checkPermission(@NotNull Permissible permissible) {
+        return permissible.hasPermission(PermissionManager.TREASURE_ABOUT.get());
+    }
+
+    @Override
+    public @NotNull Set<@NotNull String> getAliases() {
+        return Set.of("about");
+    }
+
+    @Override
+    public @NotNull Component getHelpText() {
+        return null;
     }
 
     /**
-     * get basic informations about this plugin like its version
+     * get basic information about this plugin like its version
      * /gt about
-     * @param commandSender sender of this command
+     *
+     * @param sender sender of this command
      */
-    protected void handleAbout(CommandSender commandSender) {
-        if (Perm.hasPermission(commandSender, Perm.TREASURE_ADMIN, Perm.TREASURE_ABOUT)) {
+    @Override
+    public boolean onCommand(final @NotNull CommandSender sender, final @NotNull String @NotNull [] args) {
+        if (checkPermission(sender)) {
             // collect all messages to send at once
             List<Component> components = new ArrayList<>();
             // header
-            components.add(Lang.build(Lang.PLUGIN_HEADER.get()));
+            components.add(LangKey.CMD_ABOUT_PLUGIN_HEADER.create());
             // version (update ?)
-            components.add(Lang.build(Lang.PLUGIN_VERSION.get().replace(Lang.VALUE, GreenTreasure.inst().getDescription().getVersion())));
+            components.add(LangKey.CMD_ABOUT_PLUGIN_VERSION.create(
+                PlaceHolder.NUMBER.string(plugin.getPluginMeta().getVersion())));
 
             //description
-            components.add(Lang.build(Lang.PLUGIN_VERSION.get().replace(Lang.VALUE, GreenTreasure.inst().getDescription().getDescription())));
+            components.add(LangKey.CMD_ABOUT_PLUGIN_DESCRIPTION.create(
+                PlaceHolder.TEXT.string(plugin.getPluginMeta().getDescription())));
 
             // send components
-            commandSender.sendMessage(Lang.join(components));
+            sender.sendMessage(Component.join(JoinConfiguration.newlines(), components));
         } else {
-            commandSender.sendMessage(Lang.build(Lang.NO_PERMISSION_COMMAND.get()));
+            plugin.getMessageManager().sendPrefixed(sender, LangKey.NO_PERMISSION);
         }
+
+        return true;
     }
 
-    /**
-     * @param args The arguments passed to the command, including final
-     *     partial argument to be completed
-     * @return suggestion of arguments
-     */
-    protected List<String> handleTabCompleate(@NotNull String[] args){
+    @Override
+    public @NotNull List<@NotNull String> onTabComplete(@NotNull CommandSender sender, @NotNull String @NotNull [] args) {
         if (args.length == 1) {
-            return Collections.singletonList(ABOUT);
+            return List.copyOf(getAliases());
         } else {
             return new ArrayList<>();
         }
