@@ -1,29 +1,41 @@
 package de.greensurvivors.greentreasure.comands;
 
-import de.greensurvivors.greentreasure.config.TreasureConfig;
-import de.greensurvivors.greentreasure.dataobjects.TreasureInfo;
-import de.greensurvivors.greentreasure.language.Lang;
-import de.greensurvivors.greentreasure.listener.TreasureListener;
-import de.greensurvivors.greentreasure.permission.Perm;
+import de.greensurvivors.greentreasure.GreenTreasure;
+import de.greensurvivors.greentreasure.PermissionManager;
+import de.greensurvivors.greentreasure.Utils;
+import de.greensurvivors.greentreasure.language.LangKey;
+import de.greensurvivors.greentreasure.language.PlaceHolder;
+import net.kyori.adventure.text.Component;
 import org.bukkit.Bukkit;
 import org.bukkit.OfflinePlayer;
 import org.bukkit.block.Container;
 import org.bukkit.command.CommandSender;
-import org.bukkit.entity.LivingEntity;
 import org.bukkit.entity.Player;
+import org.bukkit.permissions.Permissible;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
 
-import static de.greensurvivors.greentreasure.comands.TreasureCommands.FORGET;
+public class ForgetSubCommand extends ASubCommand {
 
-public class ForgetSubCommand {
-    private static ForgetSubCommand instance;
+    public ForgetSubCommand(final @NotNull GreenTreasure plugin) {
+        super(plugin);
+    }
 
-    public static ForgetSubCommand inst() {
-        if (instance == null)
-            instance = new ForgetSubCommand();
-        return instance;
+    @Override
+    protected boolean checkPermission(@NotNull Permissible permissible) {
+        return permissible.hasPermission(PermissionManager.TREASURE_FORGET.get());
+    }
+
+    @Override
+    public @NotNull Set<@NotNull String> getAliases() {
+        return Set.of("forget");
+    }
+
+    @Override
+    public @NotNull Component getHelpText() {
+        return null;
     }
 
     /**
@@ -31,71 +43,91 @@ public class ForgetSubCommand {
      * /gt forget (takes the commandSender self)
      * /gt forget uuid
      * /gt forget playerName
-     * @param commandSender sender of this command
-     * @param args given arguments
+     *
+     * @param sender sender of this command
+     * @param args   given arguments
      */
-    protected void handleForget(CommandSender commandSender, String[] args){
-        if (Perm.hasPermission(commandSender, Perm.TREASURE_ADMIN, Perm.TREASURE_FORGET)) {
-            Container container = TreasureCommands.getContainer(commandSender);
+    public boolean onCommand(final @NotNull CommandSender sender, final @NotNull String @NotNull [] args) {
+        if (checkPermission(sender)) {
+            Container container = plugin.getMainCommand().getContainer(sender);
 
-            if (container != null){
-                TreasureInfo treasureInfo = TreasureListener.inst().getTreasure(container.getLocation());
-
-                if (treasureInfo != null && treasureInfo.isGlobal()){
-                    TreasureConfig.inst().forgetPlayer(null, container.getBlock().getLocation());
-
-                    commandSender.sendMessage(Lang.build(Lang.FORGET_ALL.get()));
-                    return;
-                }
-
-                UUID uuidToForget;
-                if (args.length >= 2){
-                    OfflinePlayer offlinePlayer = Bukkit.getOfflinePlayer(args[1]);
-                    if (offlinePlayer.hasPlayedBefore()){
-                        uuidToForget = offlinePlayer.getUniqueId();
-                    } else {
-                        try{
-                            uuidToForget = UUID.fromString(args[1]);
-                        }catch (IllegalArgumentException ignored){
-                            commandSender.sendMessage(Lang.build(Lang.NO_SUCH_PLAYER.get().replace(Lang.VALUE, args[1])));
-                            return;
+            if (container != null) {
+                plugin.getTreasureManager().getTreasureInfo(container).thenAccept(treasureInfo -> {
+                    if (treasureInfo != null) {
+                        if (treasureInfo.isShared()) {
+                            plugin.getDatabaseManager().forgetPlayer(null, treasureInfo.treasureId()).thenRun(() ->
+                                plugin.getMessageManager().sendPrefixed(sender, LangKey.CMD_FORGET_SHARED_SUCCESS.create(
+                                    PlaceHolder.TREASURE_ID.component(Utils.getDisplayName(container)))));
                         }
-                    }
-                } else {
-                    if (commandSender instanceof LivingEntity livingEntity){
-                        uuidToForget = livingEntity.getUniqueId();
-                    } else {
-                        commandSender.sendMessage(Lang.build(Lang.NO_PLAYER.get()));
-                        return;
-                    }
-                }
 
-                TreasureConfig.inst().forgetPlayer(uuidToForget, container.getBlock().getLocation());
-                commandSender.sendMessage(Lang.build(Lang.FORGET_PLAYER.get().replace(Lang.UUID, uuidToForget.toString())));
+                        final OfflinePlayer playerToForget;
+                        if (args.length >= 2) {
+                            OfflinePlayer offlinePlayer = Bukkit.getOfflinePlayer(args[1]);
+                            if (offlinePlayer.hasPlayedBefore()) {
+                                playerToForget = offlinePlayer;
+                            } else {
+                                try {
+                                    playerToForget = Bukkit.getOfflinePlayer(UUID.fromString(args[1]));
+                                } catch (IllegalArgumentException ignored) {
+                                    plugin.getMessageManager().sendPrefixed(sender, LangKey.ARG_NOT_PLAYER.create(
+                                        PlaceHolder.TEXT.string(args[1])));
+                                    return;
+                                }
+                            }
+                        } else {
+                            if (sender instanceof OfflinePlayer offlinePlayer) {
+                                playerToForget = offlinePlayer;
+                            } else {
+                                plugin.getMessageManager().sendPrefixed(sender, LangKey.ERROR_SENDER_NOT_PLAYER);
+                                return;
+                            }
+                        }
+
+                        if (playerToForget.hasPlayedBefore()) {
+                            plugin.getDatabaseManager().forgetPlayer(playerToForget, treasureInfo.treasureId()).thenRun(() -> {
+                                final @NotNull Component playerName;
+                                final @Nullable Player player = playerToForget.getPlayer();
+                                if (player != null) {
+                                    playerName = player.displayName();
+                                } else {
+                                    if (playerToForget.getName() != null) {
+                                        playerName = Component.text(playerToForget.getName());
+                                    } else {
+                                        playerName = Component.text(playerToForget.getUniqueId().toString());
+                                    }
+                                }
+
+                                plugin.getMessageManager().sendPrefixed(sender, LangKey.CMD_FORGET_USER_SUCCESS.create(
+                                    PlaceHolder.TREASURE_ID.component(Utils.getDisplayName(container)),
+                                    PlaceHolder.PLAYER.component(playerName)));
+                            });
+                        } else {
+                            plugin.getMessageManager().sendPrefixed(sender, LangKey.ARG_NOT_PLAYER.create(
+                                PlaceHolder.TEXT.string(args[1])));
+                        }
+                    } else {
+                        plugin.getMessageManager().sendPrefixed(sender, LangKey.ERROR_NOT_LOOKING_AT_TREASURE);
+                    }
+                });
             } else {
-                commandSender.sendMessage(Lang.build(Lang.NOT_LOOKINGAT_CONTAINER.get()));
+                plugin.getMessageManager().sendPrefixed(sender, LangKey.ERROR_NOT_LOOKING_AT_CONTAINER);
             }
         } else {
-            commandSender.sendMessage(Lang.build(Lang.NO_PERMISSION_COMMAND.get()));
+            plugin.getMessageManager().sendPrefixed(sender, LangKey.NO_PERMISSION);
         }
+
+        return true;
     }
 
-    /**
-     * @param args The arguments passed to the command, including final
-     *     partial argument to be completed
-     * @return suggestion of arguments
-     */
-    protected List<String> handleTabCompleate(@NotNull String[] args){
+    public @NotNull List<@NotNull String> onTabComplete(@NotNull CommandSender sender, final @NotNull String @NotNull [] args) {
         switch (args.length) {
             case 1 -> {
-                return Collections.singletonList(FORGET);
+                return List.copyOf(getAliases());
             }
             case 2 -> {
-                if (args[0].equalsIgnoreCase(FORGET)) {
-                    Collection<? extends Player> onlinePlayers =  Bukkit.getOnlinePlayers();
-                    if (!onlinePlayers.isEmpty()){
-                        return onlinePlayers.stream().map(Player::getName).toList();
-                    }
+                Collection<? extends Player> onlinePlayers = Bukkit.getOnlinePlayers();
+                if (!onlinePlayers.isEmpty()) {
+                    return onlinePlayers.stream().map(Player::getName).toList();
                 }
             }
         }
